[package]
name = "vindicator"
description = "Search list manipulation framework for multi-source information retrieval"
version = "0.1.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
repository = "https://github.com/Enet4/vindicator"
keywords = ["trec", "list", "retrieval"]
categories = ["algorithms", "command-line-utilities", "science"]
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
name = "vindicator"
path = "src/lib.rs"

[[bin]]
name = "vindicator"
path = "src/main.rs"
doc = false

[dependencies]
itertools = "0.8.0"
structopt = "0.3.2"
smallvec = "0.6.8"
noisy_float = "0.1.9"
approx = "0.3.1"
